--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<a href="ADDON_ID_HERE-VERSION_NUMBER_HERE.zip">ADDON_ID_HERE-VERSION_NUMBER_HERE.zip</a>
+<a href="plugin.program.newsstand-0.0.1-alpha.zip">plugin.program.newsstand-0.0.1-alpha.zip</a>
