--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-<!DOCTYPE html>
-<a href="plugin.program.newsstand-0.0.1-alpha.zip">plugin.program.newsstand-0.0.1-alpha.zip</a>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<html>
+  <head>
+     <title>Index of</title>
+  </head>
+  <body>
+    <h1>repository.mediacenter</h1>
+    <table>
+      <tr><td><a href="README.md">README.md</a></td></tr>
+      <tr><td><a href="addons.xml">addons.xml</a></td></tr>
+      <tr><td><a href="addons.xml.md5">addons.xml.md5</a></td></tr>
+      <tr><td><a href="repository.mediacenter/">repository.mediacenter</a></td></tr>
+      <tr><td><a href="repository.mediacenter.zip">rpository.mediacenter.zip</a></td></tr>
+      <tr><td><a href="zip/">zip</a></td></tr>
+    </table>
+  </body>
+</html>
