--- a/repo/index.html
+++ b/repo/index.html
@@ -4,7 +4,7 @@
      <title>Index of</title>
   </head>
   <body>
-    <h1>zips</h1>
+    <h1>repo</h1>
     <table>
       <tr><td><a href="zips/">zips</a></td></tr>
     </table>
